flux/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dipterv
spec:
  rules:
  - host: dipterv.msc.nemes.live
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 5000
      - path: /team
        pathType: Prefix
        backend:
          service:
            name: team
            port:
              number: 5001
